# stringenum

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
